# azure-functions-logging

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Makefile  PRD.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-test.yml  e2e-azure.yml  publish-pypi.yml  release.yml  stale.yml
agent-playbook/: index.html
api/: index.html
architecture/: index.html
changelog/: index.html
choose-a-plan/: index.html
configuration/: index.html
contributing/: index.html
deployment/: index.html
development/: index.html
docs/: agent-playbook.md  api.md  architecture.md  changelog.md  configuration.md  contributing.md  deployment.md  development.md  faq.md  getting-started.md  index.md  installation.md  release_process.md  security.md  testing.md  troubleshooting.md  usage.md
docs/examples/: basic_setup.md  cold_start_detection.md  context_binding.md  context_injection.md  host_json_conflicts.md  json_output.md  logger_name_targeting.md  third_party_noise_control.md  with_scaffold.md
examples/: README.md  __init__.py  basic_setup.py  cold_start_detection.py  context_binding.py  context_injection.py  json_output.py
examples/basic_setup/: index.html
examples/cold_start_detection/: index.html
examples/context_binding/: index.html
examples/context_injection/: index.html
examples/e2e_app/: function_app.py  host.json  requirements.txt
examples/host_json_conflicts/: index.html
examples/json_output/: index.html
examples/logger_name_targeting/: index.html
examples/third_party_noise_control/: index.html
examples/with_scaffold/: index.html
faq/: index.html
getting-started/: index.html
installation/: index.html
release_process/: index.html
search/: search_index.json
security/: index.html
src/azure_functions_logging/: __init__.py  _context.py  _decorator.py  _filters.py  _formatter.py  _host_config.py  _json_formatter.py  _logger.py  _setup.py
testing/: index.html
tests/: test_context.py  test_contracts.py  test_decorator.py  test_examples.py  test_filters.py  test_formatter.py  test_host_config.py  test_integration.py  test_json_formatter.py  test_logger.py  test_public_api.py  test_setup.py  test_toolkit_metadata.py
tests/e2e/: test_logging_e2e.py
troubleshooting/: index.html
usage/: index.html
